[gd_scene load_steps=7 format=3 uid="uid://bgfaj16qrlyhf"]

[ext_resource type="Script" uid="uid://5nsfrut0l8bb" path="res://Scripts/messenger.gd" id="1_jdkcu"]
[ext_resource type="Texture2D" uid="uid://dwi6caya0fwot" path="res://Assets/Sprites/Spritesheet.png" id="2_fx8ed"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7u53x"]
size = Vector2(16, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_gn4cm"]
radius = 74.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u53x"]
bg_color = Color(0.201527, 0.201527, 0.201527, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gn4cm"]
bg_color = Color(0.94902, 0, 0, 1)

[node name="messenger" type="CharacterBody2D" groups=["friendly"]]
collision_layer = 32
collision_mask = 571
script = ExtResource("1_jdkcu")

[node name="sprite_2d" type="Sprite2D" parent="."]
texture = ExtResource("2_fx8ed")
flip_h = true
region_enabled = true
region_rect = Rect2(995.36224, 32.659813, 26.602478, 32.97908)

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_7u53x")

[node name="navigation_agent_2d" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
navigation_layers = 19
avoidance_enabled = true
radius = 8.0

[node name="interaction_area" type="Area2D" parent="."]
collision_layer = 0

[node name="collision_shape_2d" type="CollisionShape2D" parent="interaction_area"]
visible = false
shape = SubResource("CircleShape2D_gn4cm")

[node name="avoidance_ray" type="RayCast2D" parent="." groups=["friendly"]]
target_position = Vector2(70, 0)
collision_mask = 1075

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -19.0
offset_right = 8.0
offset_bottom = -17.0
theme_override_styles/background = SubResource("StyleBoxFlat_7u53x")
theme_override_styles/fill = SubResource("StyleBoxFlat_gn4cm")
rounded = true
show_percentage = false

[node name="check_timer" type="Timer" parent="."]
wait_time = 2.0
